add comparison with phantom
refactor sysmatrix computation routines to remove reconparams

reorganize writesysmatrix routine

Add initial cython code to write system matrix

Fix function definition mismatch bwetwe c-code and cython

fix function name conflict

add python to c data conversion

make naming of c and python variables consistent

misc bug fixes to fix some compilation errors

Fix all compilation errors

make cython interfaced c functions void type

misc varioable changes

fix bug in cy-interface c code

add demo with numpy angles

specify language for building extension

update repo description

add requirments file for pip

remove redundancies between environment.yml and requirements.txt

add simplifications to function import

update gitignore for cython build files

add all c source files in setup without redundancy

make gcc default compiler and make setup work without setting CC variable

spacing change

add neccessary import c interface

add pycharm files to gitignore

clean up code according to cython compiler warnings

update gitignore

update c code specification

update compilation

make gcc default compiler

remove math macros that may not be included in math.h in all systems

remove math micros that may not be present in all systems

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,22 @@
-*.DS_Store
-sftp-config.json
-*.o
 *.pyc
+__pycache__
 
-# OSX / *nix default autosave extension MATLAB
-*.m~
+# docs
+docs/build/
 
-# ignore all files in bin folder except the empty file gitignore and ConeBeam
-bin/*
-!bin/.gitignore
-!bin/ConeBeam.sh
+# compiled files
+mbircone/conebeam.c
+mbircone/*.so
+*.o
+build/
+dist/
+mbircone.egg-info/
 
-# runtime log files
-log_*
+# sublime text config
+sftp-config.json
 
-# demo output
-#demo/inversion/*
+# macos hidden file
+*.DS_Store
+
+# Pycharm idea folder
+.idea/
