add log files to gitignore
add mbir files to gitignore

add verbose flag

add pip as dependency

update clean script

remove extra printing

move fucntions from io3d

remove downsampled data writing

remove intermediate data write during reconstruction

move sino iamge writing to i03d and main

add todo

move print functions out of io3d

purge pathnames from recon

remove output to text file in params printing

replace logfile writes with prints

convert log writes to print in disp_iterationInfo

purge LOG_PROGRESS

purge LOG_STATS

purge log-time

purge icd file writing

purge io3d from core routines

remove unused file

remove confusion about A maatrix rho

fix typo

update todo

add python code to comapare recon with phantom on disk

remove RRMSE stopping criterion

remove RRMSE printing

remove RRMSE variables

remove phantom reading and allocation

remove phantom from img structure

remove all instances of phantom

purge stopThesholdRRMSE_pct parameter

remove ROI alocation during recon to save memory

purge reconROI pathnames

purge phantom present indicator

purge plainparams and io dependencies from python installation

add code to allocate multi-dimensional array using existing 1D data

cleanup function definitions

add skeleton recon interface c code

clean compiled files in command line demo

Purge downsampleFNamePrefix parameter

purge downsampleFactorSino

purge downsampleFactorRecon

change reconparams to produce the same output without Tggmrf

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ build/
 dist/
 mbircone.egg-info/
 
+# mbir files
+*log_progress.txt
+*log_time.txt
+*.sysmatrix
+
 # sublime text config
 sftp-config.json
 
