--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ __pycache__
 docs/build/
 
 # compiled files
-mbircone/cone3D/*.c
-mbircone/cone3D/*.so
+mbircone/*.c
+mbircone/*.so
 *.o
 build/
 dist/
