Reorganize repository structure (#33)
* reorganized files. Ready to PR

* minor fix in cone3D docstring formatting. Fix variable name when calling auto_sigma_p from recon function

* update run_clean_install to fit the new code structure

* update gitignore to align with new code structure

* Fixed preprocess import error in reorganize branch.

Co-authored-by: DamonLee5 <liwr5damon@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ __pycache__
 docs/build/
 
 # compiled files
-mbircone/cone3D/*.c
-mbircone/cone3D/*.so
+mbircone/*.c
+mbircone/*.so
 *.o
 build/
 dist/
@@ -40,4 +40,4 @@ demo/*.sub
 demo_compare*
 demo/dask-worker-space/*
 
-mbircone/preprocess/test_*
+mbircone/test_*
