--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,10 +5,22 @@
 # Required
 version: 2
 
+# Set the OS, Python version and other tools you might need
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.8"
+
+submodules:
+  include: all
+  recursive: true
 python:
-  version: "3.8"
   install:
     - requirements: requirements.txt
     - requirements: docs/requirements.txt
-    - method: pip
+    - method: setuptools
       path: .
+# Build documentation in the "docs/" directory with Sphinx
+sphinx:
+  configuration: docs/source/conf.py
+      
